--- a/config/west.yml
+++ b/config/west.yml
@@ -2,12 +2,20 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: petejohanson
+      revision: feat/pointers-move-scroll
       import: app/west.yml
+    - name: zmk-num-word
+      remote: dhruvinsh
+      revision: main
+    - name: zmk-tri-state
+      remote: dhruvinsh
+      revision: main
   self:
     path: config
