--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -1,3 +1,4 @@
+CONFIG_ZMK_KEYBOARD_NAME=Argon
 # Uncomment these two line to add support for encoders to your firmware
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
