--- a/config/west.yml
+++ b/config/west.yml
@@ -1,18 +1,21 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: dhruvinsh
-      url-base: https://github.com/dhruvinsh
     - name: petejohanson
       url-base: https://github.com/petejohanson
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
+    - name: urob
+      url-base: https://github.com/urob
   projects:
     - name: zmk
       remote: petejohanson
       revision: feat/pointers-move-scroll
       import: app/west.yml
-    - name: zmk-num-word
-      remote: dhruvinsh
+    - name: zmk-auto-layer
+      remote: urob
+      revision: main
+    - name: zmk-helpers
+      remote: urob
       revision: main
     - name: zmk-tri-state
       remote: dhruvinsh
