--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -8,3 +8,6 @@ CONFIG_ZMK_DISPLAY=y
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
+
+# Mouse support
+CONFIG_ZMK_MOUSE=y
