--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -16,24 +16,23 @@
 #define COMBO_IDLE_DEF  150 // For horizontal combos, usually triggered by rollable keys.
 #define COMBO_IDLE_SLOW 250 // For combos that are trigger layer changes or mods.
 
-/* Alphabet combos */
-// ZMK_COMBO(g, AS_1(G), LM0 LB0, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-// ZMK_COMBO(y, AS_1(Y), RM0 RB0, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-
-/* Media combos */
-ZMK_COMBO(play,  &kp C_PP, LM0 LB0, SYS, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
+/* Vertical combos */
+ZMK_COMBO(lbkt, &kp LBKT, LM1 LT1, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rbkt, &kp RBKT, RM1 RT1, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(lpar, &kp LPAR, LM2 LT2, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rpar, &kp RPAR, RM2 RT2, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(lbrc, &kp LBRC, LM3 LT3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rbrc, &kp RBRC, RM3 RT3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(fslh, &kp FSLH, LM3 LB3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(bslh, &kp BSLH, RM3 RB3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
 
 /* Control combos */
 ZMK_COMBO(tab,      &kp TAB,     LB3 LB2, ALL_NM, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
 ZMK_COMBO(bspc,     &kp BSPC,    RT3 RT2, ALL_NM, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
 ZMK_COMBO(esc,      &kp ESC,     LT3 LT2, ALL_NM, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
 ZMK_COMBO(enter,    &kp ENTER,   RB3 RB2, ALL_NM, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
+ZMK_COMBO(repeat-r, &key_repeat, RM1 RM2, ALL_NM, COMBO_TERM_FAST, COMBO_IDLE_SLOW)
+ZMK_COMBO(repeat-l, &key_repeat, LM1 LM2, ALL_NM, COMBO_TERM_FAST, COMBO_IDLE_SLOW)
+
+/* Layer Combos */
 ZMK_COMBO(capsword, &caps_word,  LB0 RB0, ALP,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(repeat-r, &key_repeat, RM1 RM2, ALP,    COMBO_TERM_FAST, COMBO_IDLE_SLOW)
-ZMK_COMBO(repeat-l, &key_repeat, LM1 LM2, ALP,    COMBO_TERM_FAST, COMBO_IDLE_SLOW)
-
-
-/* Layer combos */
-// MOUSE_LAYER(KEYS_R THUMBS_R LM0 RM0)
-// ZMK_COMBO(auto-mouse, &mouse, LM0 RM0, ALL_NM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
-ZMK_COMBO(auto-num, &num_word NUM, RB1 RB2 RB3, ALP, COMBO_TERM_DEF, COMBO_IDLE_SLOW)
