--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -35,4 +35,6 @@ ZMK_COMBO(repeat-r, &key_repeat, RM1 RM2, ALL_NM, COMBO_TERM_FAST, COMBO_IDLE_SL
 ZMK_COMBO(repeat-l, &key_repeat, LM1 LM2, ALL_NM, COMBO_TERM_FAST, COMBO_IDLE_SLOW)
 
 /* Layer Combos */
-ZMK_COMBO(capsword, &caps_word,  LB0 RB0, ALP,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+ZMK_COMBO(capsword, &caps_word, LB0 RB0,     ALP,    COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
+MOUSE_LAYER(KEYS_R THUMBS_R LM4 LM3 LM2 LM1)
+ZMK_COMBO(mouse,    &mouse,     RB1 RB2 RB3, ALL_NM, COMBO_TERM_SLOW, COMBO_IDLE_SLOW)
