feat: flip sides for symb and navi layers.

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -17,14 +17,14 @@
 #define COMBO_IDLE_SLOW 250 // For combos that are trigger layer changes or mods.
 
 /* Vertical combos */
-ZMK_COMBO(lbkt, &kp LBKT, LM1 LT1, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(rbkt, &kp RBKT, RM1 RT1, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(lpar, &kp LPAR, LM2 LT2, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(rpar, &kp RPAR, RM2 RT2, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(lbrc, &kp LBRC, LM3 LT3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(rbrc, &kp RBRC, RM3 RT3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(fslh, &kp FSLH, LM3 LB3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
-ZMK_COMBO(bslh, &kp BSLH, RM3 RB3, ALP, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(lbkt, &kp LBKT, LM1 LT1, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rbkt, &kp RBKT, RM1 RT1, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(lpar, &kp LPAR, LM2 LT2, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rpar, &kp RPAR, RM2 RT2, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(lbrc, &kp LBRC, LM3 LT3, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(rbrc, &kp RBRC, RM3 RT3, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(fslh, &kp FSLH, LM2 LB2, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
+ZMK_COMBO(bslh, &kp BSLH, RM2 RB2, ALP NUM SYM, COMBO_TERM_DEF, COMBO_IDLE_FAST)
 
 /* Control combos */
 ZMK_COMBO(tab,      &kp TAB,     LB3 LB2, ALL_NM, COMBO_TERM_DEF,  COMBO_IDLE_SLOW)
